--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ obj/project.assets.json
 obj/project.nuget.cache
 obj/SmartInverterAPI.csproj.nuget.dgspec.json
 obj/SmartInverterAPI.csproj.nuget.g.props
+obj/Debug/net6.0/SmartInverterAPI.csproj.FileListAbsolute.txt
