--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "CommonDatabase": "Server=localhost;Database=Common;User Id=sa;Password=Password!23;"
+  },
   "AllowedHosts": "*"
 }
