--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "CommonDatabase": "Server=localhost;Database=Common;User Id=sa;Password=Password!23;"
   }
 }
