Docker Related Changes

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "CommonDatabase": "Server=localhost;Database=Common;User Id=sa;Password=Password!23;"
+    "CommonDatabase": "Server=sqlserverdb;Database=Common;User Id=sa;Password=Password!23;"
   }
 }
