--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "CommonDatabase": "Server=localhost;Database=Common;User Id=sa;Password=Password!23;"
+    "CommonDatabase": "Server=sqlserverdb;Database=Common;User Id=sa;Password=Password!23;"
   },
   "AllowedHosts": "*"
 }
