--- a/SmartInverterAPI.csproj
+++ b/SmartInverterAPI.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>2419d477-ce0e-498f-bb27-067673e37afc</UserSecretsId>
   </PropertyGroup>
 
 
