--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ obj/SmartInverterAPI.csproj.nuget.dgspec.json
 obj/SmartInverterAPI.csproj.nuget.g.props
 obj/Debug/net6.0/SmartInverterAPI.csproj.FileListAbsolute.txt
 *.pubxml
+.DS_Store
